build/log/idf_py_stderr_output_15189
Command: make -j 10 all
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c: In function 'spiStartTransaction':
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:519:13: warning: unused variable 'currTByte' [-Wunused-variable]
  519 |     uint8_t currTByte = 0, currTBit;
      |             ^~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:515:14: warning: unused variable 'rxBuf' [-Wunused-variable]
  515 |     uint8_t *rxBuf = (uint8_t*)dev->rBuff;
      |              ^~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:514:14: warning: unused variable 'txBuf' [-Wunused-variable]
  514 |     uint8_t *txBuf = (uint8_t*)dev->tBuff;
      |              ^~~~~
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c: In function 'destroySPIDevice':
/home/fus/Documents/DO-AN-02/comDriver/spi/spi.c:648:10: error: 'spiDev_t' has no member named 'rBuffIndex'; did you mean 'tBuffIndex'?
  648 |     dev->rBuffIndex = 0;
      |          ^~~~~~~~~~
      |          tBuffIndex
make[2]: *** [esp-idf/spi/CMakeFiles/__idf_spi.dir/build.make:79: esp-idf/spi/CMakeFiles/__idf_spi.dir/spi.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7589: esp-idf/spi/CMakeFiles/__idf_spi.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:10:9: note: '#pragma message: oled128x64.c is compiling...'
   10 | #pragma message("oled128x64.c is compiling...")
      |         ^~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c: In function 'oledResetView':
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:132:46: warning: passing argument 2 of 'i2cSetTransmitBuffer' discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
  132 |     ret = i2cSetTransmitBuffer(oled->i2cDev, cmds, sizeof(cmds));
      |                                              ^~~~
In file included from /home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64Definitions.h:4,
                 from /home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:6:
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:62:49: note: expected 'void *' but argument is of type 'const uint8_t *' {aka 'const unsigned char *'}
   62 | def i2cSetTransmitBuffer(i2cDev_t * dev, void * tBuff, size_t size);
      |                                          ~~~~~~~^~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h: At top level:
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:31:23: warning: 'i2cHandleSDAIsr' defined but not used [-Wunused-function]
   31 | static void IRAM_ATTR i2cHandleSDAIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:22:23: warning: 'i2cHandleSCLIsr' defined but not used [-Wunused-function]
   22 | static void IRAM_ATTR i2cHandleSCLIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
make: *** [Makefile:136: all] Error 2
